--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     tools:context=".ui.home.HomeActivity">
 
     <FrameLayout
@@ -18,24 +16,24 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:text="Home" />
+            android:text="@string/home" />
 
         <Button
             android:id="@+id/logout"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
-            android:text="Logout"
-            android:layout_marginRight="10dp"
+            android:text="@string/logout"
+            android:layout_marginEnd="10dp"
             android:layout_gravity="center|right"/>
 
         <Button
             android:id="@+id/refresh"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
-            android:text="Refresh"
-            android:layout_marginLeft="10dp"
+            android:text="@string/refresh"
+            android:layout_marginStart="10dp"
             android:layout_gravity="center|left"/>
 
     </FrameLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
