--- a/app/src/main/res/layout/fragment_detail_web.xml
+++ b/app/src/main/res/layout/fragment_detail_web.xml
@@ -2,7 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.detail.fragments.DetailFragment">
+    tools:context=".ui.detail.fragments.DetailWebFragment">
 
     <data>
         <variable
@@ -19,13 +19,12 @@
         android:layout_height="match_parent" >
 
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:height="50dp"
             android:text="@{viewModel.text}"
             android:onClick="@{() -> handle.didTapClose()}"
-            android:id="@+id/buttonCloseWebview"
+            android:id="@+id/buttonClose"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent" />
@@ -33,11 +32,14 @@
         <WebView
             android:id="@+id/webview"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/buttonCloseWebview" />
+            app:layout_constraintTop_toBottomOf="@id/buttonClose"
+            app:layout_constraintVertical_bias="1.0" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
