--- a/app/src/main/res/layout/fragment_detail_image.xml
+++ b/app/src/main/res/layout/fragment_detail_image.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.detail.fragments.DetailImageFragment">
 
     <data>
@@ -30,7 +31,8 @@
         <ImageView
             android:id="@+id/img"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            app:imgURL="@{viewModel.url}" />
     </LinearLayout>
 
 </layout>
