--- a/app/src/main/res/layout/fragment_detail_image.xml
+++ b/app/src/main/res/layout/fragment_detail_image.xml
@@ -2,7 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.detail.fragments.DetailImageFragment">
+    tools:context=".ui.detail.DetailImageFragment">
 
     <data>
         <variable
@@ -32,7 +32,7 @@
             android:id="@+id/img"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:imgURL="@{viewModel.url}" />
+            app:imgURL="@{viewModel.img}" />
     </LinearLayout>
 
 </layout>
