--- a/app/src/main/res/layout/fragment_login_success.xml
+++ b/app/src/main/res/layout/fragment_login_success.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".ui.login.fragments.LoginSuccessFragment">
+    tools:context=".ui.login.LoginSuccessFragment">
 
 
     <data>
@@ -11,7 +11,7 @@
 
         <variable
             name="handle"
-            type="com.example.baseandroid.ui.login.fragments.LoginHandle" />
+            type="com.example.baseandroid.ui.login.LoginHandle" />
     </data>
 
     <LinearLayout
