--- a/app/src/main/res/layout/fragment_login_success.xml
+++ b/app/src/main/res/layout/fragment_login_success.xml
@@ -7,7 +7,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.manhpham.baseandroid.ui.login.LoginViewModel" />
+            type="com.manhpham.baseandroid.viewmodel.LoginViewModel" />
 
         <variable
             name="handle"
